upload file vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
-    "version": 2,
-    "builds": [{
+  "version": 2,
+  "builds": [
+    {
       "src": "./app.js",
-      "use": "@now/node-server"
-    }],
-    "routes": [{"handle": "filesystem"},
-      {
-        "src": "/.*",
-        "dest": "app.js"
-      }
-    ]
-  }
-  
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/.*",
+      "dest": "app.js"
+    }
+  ]
+}
