upload file vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,33 @@
 {
   "version": 2,
+
   "builds": [
     {
       "src": "./app.js",
+
       "use": "@vercel/node"
     }
   ],
+
   "routes": [
     { "handle": "filesystem" },
+
     {
       "src": "/.*",
-      "dest": "app.js"
+
+      "dest": "app.js",
+
+      "methods": ["GET", "POST", "OPTIONS"],
+
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+
+        "Access-Control-Allow-Credentials": "true"
+      },
+
+      "continue": true
     }
   ]
 }
