--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
 
       "dest": "app.js",
 
-      "methods": ["GET", "POST", "OPTIONS"],
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
 
       "headers": {
         "Access-Control-Allow-Origin": "*",
